[package]
name = "riddly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="3", features=["rustls"] }
actix-files = "0.5"
actix-rt = "1.1.1"
env_logger = "0.9"
log = "0.4"
serde = "1"
serde_json = "1"
futures = "0.3"
mime = "0.3.16"
lazy_static = "1.4.0"
actix-web-httpauth = "0.5.1"
ureq = { version = "~2.3", features = ["json", "charset"] }
